<resources>
    <string name="app_name">Real_proje</string>
    <string name="good_morning">Good morning</string>
    <string name="shania_fraser">Shania fraser</string>
    <string name="find_new_dishes">Find new dishes</string>
    <string name="all">All</string>
    <string name="categories">Categories</string>
    <string name="todo">TODO</string>
    <string name="todoo">TODO</string>
    <string name="burger">Burger</string>
    <string name="todooo">TODO</string>
    <string name="to_do">TODO</string>
    <string name="todoooo">TODO</string>
    <string name="fried_shrimp">Fried Shrimp</string>
    <string name="todooooo">TODO</string>
    <string name="this_is_my_kind_of_breakfast_egg_sandwich">This is my kind of breakfast egg sandwich</string>
    <string name="todos">TODO</string>
    <string name="ingredients">Ingredients</string>
    <string name="_7_item">7 item</string>
    <string name="price">Price</string>
    <string name="_29_00">$29.00</string>
    <string name="ss">TODO</string>
    <string name="s">TODO</string>
    <string name="sss">TODO</string>
    <string name="ssss">TODO</string>
    <string name="new_dishes">New dishes</string>
    <string name="d">TODO</string>
    <string name="fried_shrimps">Fried Shrimp</string>
    <string name="dd">TODO</string>
    <string name="_34_78">$34.78</string>
    <string name="broccoli">Broccoli</string>
    <string name="ddd">TODO</string>
    <string name="h_1_1">H,1:1</string>
</resources>