<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/morning"
        android:textColor="#686F82"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_morning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.045"/>
    <TextView
        android:id="@+id/Shania"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shania_fraser"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/morning"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.0"/>
    <ImageView
        android:id="@+id/girl"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/girl"
        app:layout_constraintVertical_bias="0.051"
        app:layout_constraintHorizontal_bias="0.93"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/find"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:inputType="text"
        android:hint="@string/find_new_dishes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Shania"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/shapesec"
        android:textColorHint="#686F82"
        android:textColor="#686F82"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintVertical_bias="0.06"
        android:drawableEnd="@drawable/meyvee"
        android:drawablePadding="20dp"
        android:paddingStart="25dp"
        tools:ignore="LabelFor,RtlSymmetry"
        android:autofillHints="5dp" />
    <TextView
        android:id="@+id/catagories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/find"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.09"
        app:layout_constraintHorizontal_bias="0.1"/>
    <TextView
        android:id="@+id/all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:textSize="22sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/find"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintVertical_bias="0.094"/>
    <TextView
        android:id="@+id/iconOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/find"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintVertical_bias="0.09"
        android:layout_marginStart="260dp"
        app:drawableStartCompat="@drawable/baseline_arrow_forward_24" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/catagories"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"/>
    <TextView
        android:id="@+id/news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_dishes"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycleView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        app:layout_constraintVertical_bias="0.07"
        app:layout_constraintHorizontal_bias="0.1"/>
    <TextView
        android:id="@+id/allTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:textSize="22sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycleView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintVertical_bias="0.074"/>
    <TextView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycleView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintVertical_bias="0.07"
        android:layout_marginStart="260dp"
        app:drawableStartCompat="@drawable/baseline_arrow_forward_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.99"
        app:layout_constraintTop_toBottomOf="@id/news"/>






</androidx.constraintlayout.widget.ConstraintLayout>